--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,6 +14,7 @@
     "default": true,
     "line_length": false
   },
-  "colors.enable": true
+  "colors.enable": true,
+  "elixir.pathToElixirLS": "~/.elixir-ls/release/language_server.sh"
 }
 
